--- a/src/Home.css
+++ b/src/Home.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -39,9 +39,6 @@
 
 .navbar{
   width: 100vw!important;
-}
-.navbar.Link {
-  color: white;
 }
 
 .jumbotron {
